--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,10 +1,24 @@
 {{ define "main" }}
+
+<!-- breadcrumb 구현 -->
+<hr>
+{{ if .Content }}
+<article class="markdown">
+  {{- .Content -}}
+</article>
+
+<hr>
+
+{{ end }}
+
   {{ range sort .Paginator.Pages }}
   <article class="markdown book-post">
+    <div style="border-black: 1px">
     <h2>
       <a href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
     </h2>
     {{ partial "docs/post-meta" . }}
+    </div>
   </article>
   {{ end }}
 
